# Smart-Farm-gp

./: Makefile  Makefile.am  Makefile.in  README.md  config.h  config.h.in~  config.status  configure  configure.in  project_test_gc.glade.bak  project_test_gc.gladep  project_test_gp.glade.bak  project_test_gp.gladep.bak
autom4te.cache/: output.1  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: 0style.txt  Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  fonctions_gp.c  header_gp.h  interface.c  interface.c.bak  interface.h.bak  main.c  plante (copy).txt  plante.txt  plante_historique.txt  project_test_gp
src/.deps/: callbacks.Po  fonctions.Po  fonctions_gp.Po  fonctions_gp_p2.Po  main.Po
